# brickdb

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust-test.yml
proto/bdb/internal/v0/: internal.proto
proto/bdb/v0/: bdb.proto
proto/brickdb/internal/v0/: internal.proto
proto/brickdb/v0/: brickdb.proto
src/: lib.rs
src/auth/: mod.rs
src/db/: collection.rs  database.rs  mod.rs
src/exec/: mod.rs
src/execution/: mod.rs
src/index/: bptree.rs  mod.rs
src/internal/: mod.rs  server.rs
src/logging/: mod.rs
src/networking/: mod.rs
src/query/: mod.rs
src/server/: mod.rs  server.rs
src/storage/: conf.rs  level.rs  lsm.rs  memtable.rs  mod.rs  record.rs  sstable.rs  table.rs  util.rs  wal.rs
