[package]
name = "brickdb"
version = "0.1.0"
edition = "2021"
description = "A basic proof-of-concept database written in Rust."
readme = "README.md"
license = "MIT"
repository = "https://github.com/a-poor/brickdb"
keywords = ["database", "storage"]
categories = ["database"]


[lib]
name = "brickdb_lib"
path = "src/lib.rs"

[[bin]]
name = "brickdb_server"
path = "src/bin/server.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.10"
bson = { version = "2.6.0", features = ["serde_with"] }
bloom = "0.2.0"
