[package]
name = "brickdb"
version = "0.1.0-alpha.1"
edition = "2021"
description = "A basic proof-of-concept database written in Rust."
readme = "README.md"
license = "MIT"
repository = "https://github.com/a-poor/brickdb"
keywords = ["database", "storage"]
categories = ["database"]


[lib]
name = "brickdb_lib"
path = "src/lib.rs"

[[bin]]
name = "brickdb_server"
path = "src/bin/server.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
bson = { version = "2", features = ["serde_with"] }
bloom = "0.3.2"
anyhow = "1.0.71"
snap = "1.1.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.9.2"
prost = "0.11.9"

[build-dependencies]
tonic-build = "0.9"
